[package]
name = "bls_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signature_bls = { version = "0.35.0" , default-features = false }
externc-libm = { git = "https://github.com/HaruxOS/externc-libm" }
libc = "0.2.134"
data-encoding = {default-features = false, features = ["alloc"]}
riscv-rt = "0.9.0"
panic-halt = "0.2.0"

[profile.release]
codegen-units = 1
debug = true 
lto = true  