[package]
name = "bls_no_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signature_bls = { version = "0.35.0" , default-features = false }
data-encoding = {default-features = false, features = ["alloc"]}
riscv-rt = { git = "https://github.com/rust-embedded/riscv-rt/", branch = "master" }
panic-halt = "0.2.0"

[profile.release]
debug = true 
